--- a/English/원어민이매일쓰는_구동사_30.md
+++ b/English/원어민이매일쓰는_구동사_30.md
@@ -1,12 +1,13 @@
 ### 원어민이 매일 쓰는 구동사 30개 첫 번째 영상.
 * https://www.youtube.com/watch?v=Q3cN-ufLtvs&t=2s
 
-* 1. Be off (떨어짐)
-  - I'm off tomorrow.
-  - Where are you off to? 
+1. Be off (떨어짐)
+    - I'm off tomorrow.
+    - Where are you off to? 
   
-* 2. burn out
-  - 하얗게 불태웠어...
-  - I'm burned out.
-  - Hey! Please get some rest. You'll burn yourself out.
+2. burn out
+    - 하얗게 불태웠어...
+    - I'm burned out.
+    - Hey! Please get some rest. You'll burn yourself out.
   
+3. let down
