--- a/English/원어민이_매일쓰는_구동사_30.md
+++ b/English/원어민이_매일쓰는_구동사_30.md
@@ -1,5 +1,6 @@
 ### 원어민이 매일 쓰는 구동사 30개 첫 번째 영상.
 * https://www.youtube.com/watch?v=Q3cN-ufLtvs&t=2s
+* https://youtu.be/TP0KoAwnp4k
 
 1. Be off (떨어짐)
     - I'm off tomorrow.
@@ -78,6 +79,123 @@
       - It will all work out ok. 다 잘될 거야...
       - It all worked out ok.
       
+16. Take off
+    - 벗다. Take off shoes.
+      - I'm taking off my makeoff.
+    - 이륙하다.
+      - Now our plain is just about to take off.
+    - 갈께...
+      - I'm taking off.
+      - I should get going. I'm taking off. Bye bye.
+      
+17. Break up
+    - 완전히 깨지다. 이별하다.
+      - We broke up yesterday.
+      - I want to break up with you.
+      - We will never break up.
+      
     
+18. Take over
+    - 인수하다.
+      - Apple decided to take over samsung.
+    - Control이 완전히 넘어가는 것
+      - 대신하다.
+      - I'll take over for you.
+      - Excuse me, something just campe up. Can you take over for me?
+      - Can you take over for a sec?
+
+19. Piss off
+    - I'm pissed off. 빡쳐.
+    - You're srarting to piss me off.
+
+20. Come up
+    - Up에는 '나타나는' 에너지가 있다.
+    - (일이) 발생하다.
+      - Somethings just came up.
+    - (가까이) 다가오다.
+      - A gay came up to me.
+      - A puppy is coming up to me.
+    - (생각) 떠오르다.
+      - I came up with his name.
+      - I came up with an idea.
+      
+
+21. Put on
+    - 입다.
+      - Put on a shirt.
+    - 살이찌다.
+      - I put on weight.
     
+
+22. Put off
+    - 미루다.
+      - Can I put off the meeting until tomorrow?
+      - Never put off until tomorrow what you can do today.
+
+23. Call off
+    - 취소하다.
+      - Can I call off the meeting.
+      - We called off the wedding.
+      - The baseball game was called off because of rain.
     
+
+24. Find out
+    - 알아내다. 발견하다.
+      - I found what I like.
+      - I'm trying to find out what I do well.
+      - I'm trying to find out what I like.
+      - I found out that she cheated on me.
+
+25. Figure out
+    - 고민을 무척이나 하는, 고민끝에 알아내다...
+      - I figured it out! 
+      - I figured it out why she cheated on me.
+      - I figured it out why he acted like that.
+      
+
+26. Make up
+    - 꾸며내다(fake)
+      - Sorry, I made up all the stories.
+    - 변명하다.
+      - He's make up execuses.
+      - Don't make up exexuses.
+    - 결심하다.
+      - I made up my mind.
+      - I made up my mind to go to Canada!
+    - 화해하다.
+      - They always fight and make up.
+      - I made up with my girlfriend yesterday!
+    - I will make it up to you. 은혜는 꼭 갚을께....
+    
+
+27. break down
+    - 고장나다.
+    - My watch was broked. 시계가 깨졌다. (외관이 고장)
+    - 시계가 고장났다.(기능고장)
+      - My watch broke down.
+      - My watch has broken down.
+      - My car has broken down.
+      - It's not working. I think it's broken down.
+    
+
+28. Check out
+    - Look at this
+      - 야 이거봐봐...
+      - Hey. check this out..
+    
+
+29. Be on
+    - It's on me! 내가 쏠께....
+    - It's on the house..
+    
+    - I'm on it. 내가 맡아서 할께...
+    
+
+30. Run out
+    - We are running out of time.
+    - 떨어지다. 소진된다.
+    - We ran out of time.
+    - I ran out of money.
+    - I'm running out of patience.
+     - We've run out of milk.
+     
